--- a/docs/webstyle.css
+++ b/docs/webstyle.css
@@ -14,7 +14,7 @@ display: inline-block;
 }
 
 h1 {
-    line-height: 80%;
+    line-height: 1.25em;
 }
 
 #S1, #S2, #S3 {
@@ -101,7 +101,8 @@ td.ajcAdd {
 #banner h1 {
     font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
     font-size: 3em;
-    line-height: 0px;
+    line-height:1em;
+
 }
 
 #banner h2 {
@@ -114,19 +115,24 @@ td.ajcAdd {
 }
 
 #menu {
-padding: 0 0 0 5px;
-height: 30px;
-margin: 0px auto;
+padding-bottom:1em;
+/*height: 30px;*/
+margin: auto;
 background: #27006b; 
+width:100%;
+display:flex;
 }
 
 #menu a {
 vertical-align: baseline;
-display: block;
-float: left;
-padding: 5px 10px 7px 10px;
+/*display: block;*/
+/*float: left;*/
+padding-left: 1em;
+padding-right: 1em;
+padding-top:.5em;
 text-decoration: none;
 font-family: Georgia, serif;
+font-size: 1.5vw;
 text-align: center;
 color: #ffffff;}
 
@@ -137,23 +143,28 @@ color: #ffffff;}
 }
 
 #middle{
-    width: 1225px;
-    margin: 0px auto;
+    width: 70%;
+    margin: auto;
     padding: 0 0 0 0px;
     background:#ffffff;
 }
 
 #content{
-    width: 1100px;
-    margin: 15px auto;
-    
+    width: 95%;
+    margin:auto;
+
+}
+iframe {
+width:100%;
+height:1000px
 }
 
 #footer {
-height: 50px;
-margin: 0px auto;
+/*height: 50px;*/
+margin: auto;
 background: #27006b;
 color: white;
+font-size: 1.1vw;
 }
 
 #footer p{
